<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@android:color/white">
    <TextView
        android:id="@+id/tvEditSet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ttAddSet"
        android:textSize="16sp"
        android:padding="14dp"
        android:gravity="center"
        android:textColor="@color/tvBlack" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintSet"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bgLine"/>
    <TextView
        android:id="@+id/tvChange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvChange"
        android:textSize="16sp"
        android:padding="14dp"
        android:textColor="@color/tvBlack"
        android:gravity="center"/>
</LinearLayout>